Update Navigation component and animejs.html

--- a/public/animejs.html
+++ b/public/animejs.html
@@ -73,13 +73,13 @@
 <span>Discord</span></a></li> -->
         <li>
           <sponsor-button>
-          <a href="https://github.com/sponsors/juliangarnier" class="main-nav-link sponsor-button" target="_blank" title="Sponsor Julian Garnier on GitHub">
+          <a href="#saved-projects" class="main-nav-link sponsor-button" title="Saved Projects">
             <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" class="icon">
   <g fill="none" fill-rule="evenodd">
     <path fill="currentColor" fill-rule="nonzero" d="M12 18.445a.778.778 0 0 1-.34-.078C11.39 18.235 5 15.077 5 9.889a3.889 3.889 0 0 1 6.638-2.75L12 7.5l.362-.361A3.889 3.889 0 0 1 19 9.889c0 5.17-6.387 8.344-6.66 8.478a.778.778 0 0 1-.34.078z"></path>
   </g>
 </svg>
-            <span>Sponsor</span>
+            <span>Saved Projects</span>
           </a>
           </sponsor-button>
         </li>
@@ -715,7 +715,7 @@
       <a class="docs-link" title="Draggable properties" href="draggable-properties.html" data-id="draggable-draggable-properties">
         Properties        <!--  -->
                       </a>
-                </li>
+          </li>
   </ul>
           </li>
 
@@ -724,97 +724,7 @@
 
 
 
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Web Animation API" href="web-animation-api.html" data-id="web-animation-api">
-        WAAPI        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                  <ul class="docs-nav-item">
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="When to use WAAPI" href="when-to-use-waapi.html" data-id="web-animation-api-when-to-use-waapi">
-        When to use        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Hardware-accelerated animations" href="hardware-accelerated-animations.html" data-id="web-animation-api-hardware-accelerated-animations">
-        Hardware-acceleration        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Improvements to the Web Animation API" href="improvements-to-the-web-animation-api.html" data-id="web-animation-api-improvements-to-the-web-animation-api">
-        Improvements to WAAPI        <!--  -->
-                      </a>
-                  <ul class="docs-nav-item">
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Sensible defaults" href="sensible-defaults.html" data-id="web-animation-api-improvements-to-the-web-animation-api-sensible-defaults">
-        Sensible defaults        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Multi-targets animation" href="multi-targets-animation.html" data-id="web-animation-api-improvements-to-the-web-animation-api-multi-targets-animation">
-        Multi-targets animation        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Default units" href="default-units.html" data-id="web-animation-api-improvements-to-the-web-animation-api-default-units">
-        Default units        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Function based values" href="function-based-values.html" data-id="web-animation-api-improvements-to-the-web-animation-api-function-based-values">
-        Function based values        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Individual CSS transforms" href="individual-css-transforms.html" data-id="web-animation-api-improvements-to-the-web-animation-api-individual-css-transforms">
-        Individual transforms        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Individual property parameters" href="individual-property-parameters.html" data-id="web-animation-api-improvements-to-the-web-animation-api-individual-property-parameters">
-        Individual property params        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="Spring and custom easings" href="spring-and-custom-easings.html" data-id="web-animation-api-improvements-to-the-web-animation-api-spring-and-custom-easings">
-        Spring and custom easings        <!--  -->
-                      </a>
-                </li>
-  </ul>
-          </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="API differences with native WAAPI" href="api-differences-with-native-waapi.html" data-id="web-animation-api-api-differences-with-native-waapi">
-        API differences        <!--  -->
-                      </a>
-                  <ul class="docs-nav-item">
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="iterations" href="iterations.html" data-id="web-animation-api-api-differences-with-native-waapi-iterations">
-        iterations        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="direction" href="direction.html" data-id="web-animation-api-api-differences-with-native-waapi-direction">
-        direction        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="easing" href="easing.html" data-id="web-animation-api-api-differences-with-native-waapi-easing">
-        easing        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="finished" href="finished.html" data-id="web-animation-api-api-differences-with-native-waapi-finished">
-        finished        <!--  -->
-                      </a>
-                </li>
-  </ul>
-          </li>
-          <li class="docs-nav-item theme-color theme-color-12">
-      <a class="docs-link" title="waapi.convertEase()" href="waapi-convertease.html" data-id="web-animation-api-waapi-convertease">
-        convertEase()        <!--  -->
-                      </a>
-                </li>
-  </ul>
-          </li>
+
 
   </ul>
     </nav>
