Fix TypeScript errors: Remove modal-related code from handleClick function

--- a/public/animejs.html
+++ b/public/animejs.html
@@ -170,249 +170,58 @@
 
 
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Timeline" href="timeline.html" data-id="timeline">
-        Timeline        <!--  -->
+      <a class="docs-link" title="Funding Stage" href="funding-stage.html" data-id="funding-stage">
+        Funding Stage        <!--  -->
                       </a>
                   <ul class="docs-nav-item">
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Add timers" href="add-timers.html" data-id="timeline-add-timers">
-        Add timers        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
+      <a class="docs-link" title="Seed Stage" href="seed-stage.html" data-id="funding-stage-seed">
+        Seed Stage        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Add animations" href="add-animations.html" data-id="timeline-add-animations">
-        Add animations        <!--  -->
+      <a class="docs-link" title="Series A" href="series-a.html" data-id="funding-stage-series-a">
+        Series A        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Sync WAAPI animations" href="sync-waapi-animations.html" data-id="timeline-sync-waapi-animations">
-        Sync WAAPI animations        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
+      <a class="docs-link" title="Series B" href="series-b.html" data-id="funding-stage-series-b">
+        Series B        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Sync timelines" href="sync-timelines.html" data-id="timeline-sync-timelines">
-        Sync timelines        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
+      <a class="docs-link" title="Series C" href="series-c.html" data-id="funding-stage-series-c">
+        Series C        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Call functions" href="call-functions.html" data-id="timeline-call-functions">
-        Call functions        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
+      <a class="docs-link" title="Series D" href="series-d.html" data-id="funding-stage-series-d">
+        Series D        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Time position" href="time-position.html" data-id="timeline-time-position">
-        Time position        <!--  -->
+      <a class="docs-link" title="IPO" href="ipo.html" data-id="funding-stage-ipo">
+        IPO        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Timeline playback settings" href="timeline-playback-settings.html" data-id="timeline-timeline-playback-settings">
-        Playback settings        <!--  -->
-                      </a>
-                  <ul class="docs-nav-item">
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="defaults" href="defaults.html" data-id="timeline-timeline-playback-settings-defaults">
-        defaults        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
+      <a class="docs-link" title="Private Equity" href="private-equity.html" data-id="funding-stage-private-equity">
+        Private Equity        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="delay" href="delay.html" data-id="timeline-timeline-playback-settings-delay">
-        delay        <!--  -->
+      <a class="docs-link" title="Debt Financing" href="debt-financing.html" data-id="funding-stage-debt-financing">
+        Debt Financing        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="loop" href="loop.html" data-id="timeline-timeline-playback-settings-loop">
-        loop        <!--  -->
+      <a class="docs-link" title="Grant Funding" href="grant-funding.html" data-id="funding-stage-grant-funding">
+        Grant Funding        <!--  -->
                       </a>
                 </li>
           <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="loopDelay" href="playback-loopdelay.html" data-id="timeline-timeline-playback-settings-playback-loopdelay">
-        loopDelay        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="alternate" href="alternate.html" data-id="timeline-timeline-playback-settings-alternate">
-        alternate        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="reversed" href="reversed.html" data-id="timeline-timeline-playback-settings-reversed">
-        reversed        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="autoplay" href="autoplay.html" data-id="timeline-timeline-playback-settings-autoplay">
-        autoplay        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="frameRate" href="framerate.html" data-id="timeline-timeline-playback-settings-framerate">
-        frameRate        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="playbackRate" href="playbackrate.html" data-id="timeline-timeline-playback-settings-playbackrate">
-        playbackRate        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="playbackEase" href="playbackease.html" data-id="timeline-timeline-playback-settings-playbackease">
-        playbackEase        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-  </ul>
-          </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Timeline callbacks" href="timeline-callbacks.html" data-id="timeline-timeline-callbacks">
-        Callbacks        <!--  -->
-                      </a>
-                  <ul class="docs-nav-item">
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="onBegin" href="onbegin.html" data-id="timeline-timeline-callbacks-onbegin">
-        onBegin        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="onComplete" href="oncomplete.html" data-id="timeline-timeline-callbacks-oncomplete">
-        onComplete        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="onBeforeUpdate" href="onbeforeupdate.html" data-id="timeline-timeline-callbacks-onbeforeupdate">
-        onBeforeUpdate        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="onUpdate" href="onupdate.html" data-id="timeline-timeline-callbacks-onupdate">
-        onUpdate        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="onRender" href="onrender.html" data-id="timeline-timeline-callbacks-onrender">
-        onRender        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="onLoop" href="onloop.html" data-id="timeline-timeline-callbacks-onloop">
-        onLoop        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="onPause" href="onpause.html" data-id="timeline-timeline-callbacks-onpause">
-        onPause        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="then()" href="then.html" data-id="timeline-timeline-callbacks-then">
-        then()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-  </ul>
-          </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Timeline methods" href="timeline-methods.html" data-id="timeline-timeline-methods">
-        Methods        <!--  -->
-                      </a>
-                  <ul class="docs-nav-item">
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="add()" href="add.html" data-id="timeline-timeline-methods-add">
-        add()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="set()" href="set.html" data-id="timeline-timeline-methods-set">
-        set()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="sync()" href="sync.html" data-id="timeline-timeline-methods-sync">
-        sync()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="label()" href="label.html" data-id="timeline-timeline-methods-label">
-        label()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="remove()" href="remove.html" data-id="timeline-timeline-methods-remove">
-        remove()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="call()" href="call.html" data-id="timeline-timeline-methods-call">
-        call()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="init()" href="init.html" data-id="timeline-timeline-methods-init">
-        init()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="play()" href="play.html" data-id="timeline-timeline-methods-play">
-        play()        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="reverse()" href="reverse.html" data-id="timeline-timeline-methods-reverse">
-        reverse()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="pause()" href="pause.html" data-id="timeline-timeline-methods-pause">
-        pause()        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="restart()" href="restart.html" data-id="timeline-timeline-methods-restart">
-        restart()        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="alternate()" href="alternate.html" data-id="timeline-timeline-methods-alternate">
-        alternate()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="resume()" href="resume.html" data-id="timeline-timeline-methods-resume">
-        resume()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="complete()" href="complete.html" data-id="timeline-timeline-methods-complete">
-        complete()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="cancel()" href="cancel.html" data-id="timeline-timeline-methods-cancel">
-        cancel()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="revert()" href="revert.html" data-id="timeline-timeline-methods-revert">
-        revert()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="seek()" href="seek.html" data-id="timeline-timeline-methods-seek">
-        seek()        <!--  -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="stretch()" href="stretch.html" data-id="timeline-timeline-methods-stretch">
-        stretch()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="refresh()" href="refresh.html" data-id="timeline-timeline-methods-refresh">
-        refresh()        <!-- <span title="Is new in V4" class="notif">&bull;</span> -->
-                      </a>
-                </li>
-  </ul>
-          </li>
-          <li class="docs-nav-item theme-color theme-color-3">
-      <a class="docs-link" title="Timeline properties" href="timeline-properties.html" data-id="timeline-timeline-properties">
-        Properties        <!--  -->
+      <a class="docs-link" title="Crowdfunding" href="crowdfunding.html" data-id="funding-stage-crowdfunding">
+        Crowdfunding        <!--  -->
                       </a>
                 </li>
   </ul>
@@ -850,5 +659,5 @@ anime.createTimer();
 
 <!-- !DEMOS -->
   </div>
-<script src="js/js-scripts.js"></script></body>
+</body>
 </html>
